// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`en 1`] = `
<Bootstrap(undefined)
  expand="md"
  fixed={true}
>
  <NavbarBrand
    className="Header-brand"
    href="/en"
  >
    <div
      className="Header-brand-img"
    >
      <Bootstrap(Image)
        fluid={true}
        src="Logo.svg"
      />
    </div>
    SMART CONTRACT PROGRAMMER
  </NavbarBrand>
  <NavbarToggle
    aria-controls="basic-navbar-nav"
    as="button"
    label="Toggle navigation"
  />
  <NavbarCollapse
    className="justify-content-end"
    id="basic-navbar-nav"
  >
    <Nav
      as="div"
      fill={false}
      justify={false}
    >
      <NavLink
        as={[Function]}
        disabled={false}
        href="/en/blog"
      >
        Blog
      </NavLink>
    </Nav>
    <Nav
      as="div"
      fill={false}
      justify={false}
    >
      <NavLink
        as={[Function]}
        disabled={false}
        href="/en/about"
      >
        About
      </NavLink>
    </Nav>
    <Nav
      as="div"
      fill={false}
      justify={false}
    >
      <NavLink
        as={[Function]}
        disabled={false}
        href="/languages"
      >
        <LangaugeSVG />
        <span>
          Languages
        </span>
      </NavLink>
    </Nav>
  </NavbarCollapse>
</Bootstrap(undefined)>
`;

exports[`it renders 1`] = `
<Bootstrap(undefined)
  expand="md"
  fixed={true}
>
  <NavbarBrand
    className="Header-brand"
    href="/"
  >
    <div
      className="Header-brand-img"
    >
      <Bootstrap(Image)
        fluid={true}
        src="Logo.svg"
      />
    </div>
    SMART CONTRACT PROGRAMMER
  </NavbarBrand>
  <NavbarToggle
    aria-controls="basic-navbar-nav"
    as="button"
    label="Toggle navigation"
  />
  <NavbarCollapse
    className="justify-content-end"
    id="basic-navbar-nav"
  >
    <Nav
      as="div"
      fill={false}
      justify={false}
    >
      <NavLink
        as={[Function]}
        disabled={false}
        href="/blog"
      >
        Blog
      </NavLink>
    </Nav>
    <Nav
      as="div"
      fill={false}
      justify={false}
    >
      <NavLink
        as={[Function]}
        disabled={false}
        href="/about"
      >
        About
      </NavLink>
    </Nav>
    <Nav
      as="div"
      fill={false}
      justify={false}
    >
      <NavLink
        as={[Function]}
        disabled={false}
        href="/languages"
      >
        <LangaugeSVG />
        <span>
          Languages
        </span>
      </NavLink>
    </Nav>
  </NavbarCollapse>
</Bootstrap(undefined)>
`;

exports[`jp 1`] = `
<Bootstrap(undefined)
  expand="md"
  fixed={true}
>
  <NavbarBrand
    className="Header-brand"
    href="/en"
  >
    <div
      className="Header-brand-img"
    >
      <Bootstrap(Image)
        fluid={true}
        src="Logo.svg"
      />
    </div>
    SMART CONTRACT PROGRAMMER
  </NavbarBrand>
  <NavbarToggle
    aria-controls="basic-navbar-nav"
    as="button"
    label="Toggle navigation"
  />
  <NavbarCollapse
    className="justify-content-end"
    id="basic-navbar-nav"
  >
    <Nav
      as="div"
      fill={false}
      justify={false}
    >
      <NavLink
        as={[Function]}
        disabled={false}
        href="/en/blog"
      >
        Blog
      </NavLink>
    </Nav>
    <Nav
      as="div"
      fill={false}
      justify={false}
    >
      <NavLink
        as={[Function]}
        disabled={false}
        href="/en/about"
      >
        About
      </NavLink>
    </Nav>
    <Nav
      as="div"
      fill={false}
      justify={false}
    >
      <NavLink
        as={[Function]}
        disabled={false}
        href="/languages"
      >
        <LangaugeSVG />
        <span>
          Languages
        </span>
      </NavLink>
    </Nav>
  </NavbarCollapse>
</Bootstrap(undefined)>
`;
